--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -45,6 +45,7 @@
 
 @media screen and (max-width: 480px) {
   .form {
+    margin-top: 16px;
     &__main {
       width: 320px;
     }
