--- a/scss/components/_weather.scss
+++ b/scss/components/_weather.scss
@@ -1,6 +1,7 @@
 .weather {
   position: relative;
   margin-top: 32px;
+  margin-bottom: 16px;
   display: grid;
   height: 480px;
   grid-template-columns: 1fr;
